# persistent_semicolon

./: README.md  auto_gen_test.py  chat_gpt_api_test.py  doc_string_with_ast.py  doc_string_without_ast.py  main_1.py  pyproject.toml  test_test.py
module/: main1.py  main_2.py
module1/: main_mod.py  module_test.py
module1/module3/: main_mod3.py
tests/: test_main.py  test_main_2.py
